--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,15 @@
     }
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.21.1",
     "detect-port": "^1.2.2",
     "js-cookie": "^2.2.0",
     "materialize-css": "^0.100.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
+    "react-scripts": "^4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
